--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <input class="border-[1px] p-1 rounded-md" type="text" onchange="getDat(event)"> <button>Search</button>
+        <input type="text" name="search-text" onchange="handleSearch(event)" id="" placeholder="Search">
+        <button><img src="" alt="" srcset="">Search</button>
     </header>
-    <aside></aside>
+    <aside>
+        <a href="history.html">History</a>
+    </aside>
     <main>
+      
     </main>
-
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
